fix dark mode

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1,3 +1,10 @@
+@media (prefers-color-scheme: light) {
+  html {
+    background: #fff;
+    color: #282828;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     background: #282828;
@@ -11,7 +18,6 @@ body {
   font-size: calc(0.8rem + 0.25vw);
   font-weight: 400;
   line-height: 1.65;
-  color: #282828;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
